--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,13 @@
 cmake_minimum_required(VERSION 3.22)
 
+set(CMAKE_C_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
+set(PICO_BOARD pico_w CACHE STRING "Board type")
+
 # Pull in SDK (must be before project)
 include(lib/pico-sdk/pico_sdk_init.cmake)
 
-project(template C CXX ASM)
-set(CMAKE_C_STANDARD 11)
-set(CMAKE_CXX_STANDARD 17)
+project(PAYLOAD C CXX ASM)
 
 # Initialize the SDK
 pico_sdk_init()
@@ -22,9 +24,17 @@ add_executable(${PROJECT_NAME}
     src/main.cpp
 )
 
+# Add the standard include files to the build
+target_include_directories(PAYLOAD PRIVATE
+        ${CMAKE_CURRENT_LIST_DIR}
+)
+
 # Pull in common dependencies
 target_link_libraries(${PROJECT_NAME} 
     pico_stdlib
+    pico_btstack_ble
+    pico_btstack_cyw43
+    pico_cyw43_arch_none
 )
 
 # Enable serial over USB
