--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/pico-sdk"]
 	path = lib/pico-sdk
 	url = git@github.com:raspberrypi/pico-sdk.git
+[submodule "lib/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico"]
+	path = lib/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico
+	url = git@github.com:carlk3/no-OS-FatFS-SD-SDIO-SPI-RPi-Pico.git
